# fixed_point

./: .gitignore  .travis.yml  README.md  annotated.html  appveyor.yml  classes.html  classsg14_1_1const__integer-members.html  classsg14_1_1const__integer.html  classsg14_1_1elastic-members.html  classsg14_1_1elastic.html  classsg14_1_1elastic__integer-members.html  classsg14_1_1elastic__integer.html  classsg14_1_1fixed__point-members.html  classsg14_1_1fixed__point.html  classstd_1_1enable__if_1_1type.html  common_8h_source.html  config_8h_source.html  const__integer_8h_source.html  dir_46d14ea7bd85bf8c071692ac7481d6e4.html  dir_4cb89d43f92538ff4356f1c340b21854.html  dir_75ed6d28de03590354d2ae6e8fbfe7fb.html  dir_a792a3f53dd6768cbaaba1d198a86c16.html  elastic_8h.html  elastic_8h_source.html  elastic__fixed__point_8h_source.html  elastic__integer_8h_source.html  files.html  fixed__point_8h.html  fixed__point_8h_source.html  fixed__point__arithmetic_8h_source.html  fixed__point__common__type_8h_source.html  fixed__point__extras_8h.html  fixed__point__extras_8h_source.html  fixed__point__make_8h_source.html  fixed__point__math_8h_source.html  fixed__point__named_8h_source.html  fixed__point__operators_8h_source.html  fixed__point__type_8h_source.html  fixed__point__utils_8h.html  functions.html  (+122 more)
doc/: Doxyfile  index.md
papers/: elastic.html  p0037.html  p0037r0.html  p0037r1.html  p0037r2.html  p0037r3.html  p0381.html  p0381r0.html  p0381r1.html  p0554.html  p0675.html
search/: all_0.js  all_1.js  all_2.js  all_3.js  (+44 more)
src/benchmark/: CMakeLists.txt  benchmark.cpp
(+13 files in other folders)
